--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.8.0"
+    "version": "4.2.1"
   },
   "dependencies": {
-    "hexo": "^3.8.0",
-    "hexo-generator-archive": "^0.1.5",
-    "hexo-generator-category": "^0.1.3",
-    "hexo-generator-feed": "^1.2.2",
-    "hexo-generator-index": "^0.2.1",
-    "hexo-generator-sitemap": "^1.2.0",
-    "hexo-generator-tag": "^0.2.0",
-    "hexo-renderer-ejs": "^0.3.1",
-    "hexo-renderer-markdown-it-plus": "^1.0.4",
-    "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.1"
+    "hexo": "4.2.1",
+    "hexo-cli": "3.1.0",
+    "hexo-generator-archive": "1.0.0",
+    "hexo-generator-category": "1.0.0",
+    "hexo-generator-feed": "2.2.0",
+    "hexo-generator-index": "1.0.0",
+    "hexo-generator-searchdb": "1.3.0",
+    "hexo-generator-tag": "1.0.0",
+    "hexo-renderer-marked": "2.0.0",
+    "hexo-renderer-stylus": "1.1.0",
+    "hexo-server": "1.0.0"
+  },
+  "engines": {
+    "node": ">=10.9.0"
   }
 }
