--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "hexo": {
     "version": "4.2.1"
   },
-  "dependencies": {
-    "hexo": "4.2.1",
+  "dependencies": { 
+    "hexo": "^4.2.1",
     "hexo-cli": "3.1.0",
     "hexo-generator-archive": "1.0.0",
     "hexo-generator-category": "1.0.0",
@@ -14,7 +14,7 @@
     "hexo-generator-index": "1.0.0",
     "hexo-generator-searchdb": "1.3.0",
     "hexo-generator-tag": "1.0.0",
-    "hexo-renderer-marked": "2.0.0",
+    "hexo-renderer-markdown-it-plus": "1.0.4",
     "hexo-renderer-stylus": "1.1.0",
     "hexo-server": "1.0.0"
   },
