--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "hexo": {
     "version": "4.2.1"
   },
-  "dependencies": { 
+  "dependencies": {
     "hexo": "^4.2.1",
     "hexo-cli": "3.1.0",
     "hexo-generator-archive": "1.0.0",
@@ -13,6 +13,7 @@
     "hexo-generator-feed": "2.2.0",
     "hexo-generator-index": "1.0.0",
     "hexo-generator-searchdb": "1.3.0",
+    "hexo-generator-sitemap": "^2.0.0",
     "hexo-generator-tag": "1.0.0",
     "hexo-renderer-markdown-it-plus": "1.0.4",
     "hexo-renderer-stylus": "1.1.0",
