--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "version": "4.2.1"
   },
   "dependencies": {
-    "hexo": "^4.2.1",
-    "hexo-cli": "3.1.0",
+    "hexo": "5.0.0",
+    "hexo-cli": "^4.1.0",
     "hexo-generator-archive": "1.0.0",
     "hexo-generator-category": "1.0.0",
     "hexo-generator-feed": "2.2.0",
     "hexo-generator-index": "1.0.0",
-    "hexo-generator-searchdb": "1.3.0",
+    "hexo-generator-searchdb": "1.3.2",
     "hexo-generator-sitemap": "^2.0.0",
     "hexo-generator-tag": "1.0.0",
     "hexo-renderer-markdown-it-plus": "1.0.4",
@@ -20,6 +20,6 @@
     "hexo-server": "1.0.0"
   },
   "engines": {
-    "node": ">=10.9.0"
+    "node": ">=10.13.0"
   }
 }
