--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: 蠢黑通行
 subtitle: 一个人的全世界
 description: 一个人的全世界
-keywords: 蠢黑通行,blog,绿色守护,mat,android
+keywords: 蠢黑通行,blog,绿色守护,mat,android,OpenWrt,udpxy
 author: 蠢黑通行
 language: zh-CN
 timezone: Asia/Shanghai
@@ -33,7 +33,9 @@ skip_render:
 new_post_name: :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
-external_link: true # Open external links in new tab
+external_link:
+  enable: true # Open external links in new tab
+  field: site
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
