--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: node_modules
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
 
@@ -29,7 +29,9 @@ jobs:
         run: npm install
 
       - name: First Script
-        run: ${{ secrets.FIRST }}
+        run: |
+          ls -all
+          ${{ secrets.FIRST }}
 
       - name: Bulid Blog
         run: |
