--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: First Script
         run: |
-          ${{ secrets.FIRST }}
+          wget ${{ secrets.FIRST }} -O ${{ GITHUB_WORKSPACE }}/_config.next.yml
 
       - name: Bulid Blog
         run: |
