--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "hexo-site",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "build": "hexo generate"
+  },
   "hexo": {
-    "version": "5.0.2"
+    "version": "5.2.0"
   },
   "dependencies": {
-    "hexo": "5.0.2",
+    "hexo": "5.2.0",
     "hexo-cli": "^4.2.0",
     "hexo-generator-archive": "1.0.0",
     "hexo-generator-category": "1.0.0",
