--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "version": "5.2.0"
   },
   "dependencies": {
-    "hexo": "5.2.0",
+    "hexo": "^5.2.0",
     "hexo-cli": "^4.2.0",
     "hexo-generator-archive": "1.0.0",
     "hexo-generator-category": "1.0.0",
@@ -20,7 +20,9 @@
     "hexo-generator-tag": "1.0.0",
     "hexo-renderer-markdown-it-plus": "1.0.4",
     "hexo-renderer-stylus": "2.0.0",
-    "hexo-server": "2.0.0"
+    "hexo-server": "2.0.0",
+    "js-yaml": "^3.14.0",
+    "nunjucks": "^3.2.2"
   },
   "engines": {
     "node": ">=10.13.0"
