--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Commit report
         run: |
             cd ./public
+            git init
             git config --global user.name 'GitHub Action'
             git config --global user.email 'action@github.com'
             git add .
