Update _config.yml edit description

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 蠢黑通行
 subtitle: 一个人的全世界
-description: 一个人的全世界
+description: BlackYau's Blog 蠢黑通行个人博客 想写什么就写什么的地方，主要用于记录学习以及发布各类教程。
 keywords: 蠢黑通行,blog,绿色守护,mat,android,OpenWrt,udpxy
 author: 蠢黑通行
 language: zh-CN
