--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "build": "hexo generate"
   },
   "hexo": {
-    "version": "5.2.0"
+    "version": "5.4.0"
   },
   "dependencies": {
-    "hexo": "^5.2.0",
+    "hexo": "^5.4.0",
     "hexo-cli": "^4.2.0",
     "hexo-generator-archive": "1.0.0",
     "hexo-generator-category": "1.0.0",
@@ -18,11 +18,9 @@
     "hexo-generator-searchdb": "1.3.2",
     "hexo-generator-sitemap": "^2.1.0",
     "hexo-generator-tag": "1.0.0",
-    "hexo-renderer-markdown-it-plus": "1.0.4",
-    "hexo-renderer-stylus": "2.0.0",
-    "hexo-server": "2.0.0",
-    "js-yaml": "^3.14.0",
-    "nunjucks": "^3.2.2"
+    "hexo-renderer-stylus": "2.0.1",
+    "hexo-renderer-marked": "4.0.0",
+    "hexo-server": "2.0.0"
   },
   "engines": {
     "node": ">=10.13.0"
