--- a/package.json
+++ b/package.json
@@ -3,26 +3,24 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "highlight": "node lib/highlight.js",
     "build": "hexo generate"
   },
   "hexo": {
-    "version": "5.4.0"
+    "version": "6.3.0"
   },
   "dependencies": {
-    "hexo": "^5.4.0",
-    "hexo-cli": "^4.2.0",
-    "hexo-generator-archive": "1.0.0",
-    "hexo-generator-category": "1.0.0",
+    "hexo": "6.3.0",
+    "hexo-generator-archive": "2.0.0",
     "hexo-generator-feed": "3.0.0",
-    "hexo-generator-index": "2.0.0",
-    "hexo-generator-searchdb": "1.3.2",
-    "hexo-generator-sitemap": "^2.1.0",
-    "hexo-generator-tag": "1.0.0",
-    "hexo-renderer-stylus": "2.0.1",
-    "hexo-renderer-marked": "4.0.0",
-    "hexo-server": "2.0.0"
+    "hexo-generator-index": "3.0.0",
+    "hexo-generator-searchdb": "1.4.1",
+    "hexo-renderer-marked": "6.0.0",
+    "hexo-renderer-stylus": "2.1.0",
+    "hexo-server": "3.0.0",
+    "highlight.js": "^11.7.0"
   },
   "engines": {
-    "node": ">=10.13.0"
+    "node": ">=12.17.0"
   }
 }
