--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Site deployed
-          file_pattern: 'public/*'
+          file_pattern: '*'
           branch: master
           repository: ./public
           push_options: '--force'
