--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,9 +40,9 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           new_branch: master
-          add: '*.* --force'
-          cwd: './public/'
+          add: './public/* --force'
           push: 'origin master --force'
+          default_author: github_actions
 
       # - name: Commit report
       #   run: |
