--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,9 +40,11 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           new_branch: master
-          add: './public/* --force'
+          add: '*.* --force'
+          cwd: './public'
           push: 'origin master --force'
           default_author: github_actions
+          remove: '*'
 
       # - name: Commit report
       #   run: |
