--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,9 @@ jobs:
           wget -q ${{ secrets.FIRST }} -O $GITHUB_WORKSPACE/_config.next.yml
 
       - name: Bulid Blog
-        run: npx hexo g
+        run: |
+          npx hexo g
+          rm -rf`find -type f ! -name "public"`
       
       - name: Commit Report
         uses: EndBug/add-and-commit@v9
@@ -55,3 +57,4 @@ jobs:
       #       git add .
       #       git commit -m "Site deployed by GitHub Actions"
       #       git push --force --quiet "https://${{ secrets.TOKEN }}@github.com/blackyau/blog" master:master
+git remote set-url origin https://x-access-token:${{ secrets.MY_TOKEN}}@github.com/${GH_USERNAME/Dash-User-Contributions
