--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "hexo-generator-feed": "3.0.0",
     "hexo-generator-index": "3.0.0",
     "hexo-generator-searchdb": "1.4.1",
-    "hexo-renderer-marked": "6.0.0",
+    "hexo-renderer-pandoc": "^0.3.1",
     "hexo-renderer-stylus": "2.1.0",
     "hexo-server": "3.0.0",
     "highlight.js": "^11.7.0"
