--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Install pandoc
+        run: sudo apt-get install -y pandoc
+
       - name: Checkout
         uses: actions/checkout@v3
         with:
