--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,7 @@ jobs:
 
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          branch: master
+          branch: public
           create_branch: true
           push_options: '--force'
           repository: 'public'
@@ -54,24 +54,3 @@ jobs:
           add_options: '-f'
           skip_checkout: true
           skip_fetch: true
-
-
-      # - name: Commit Report
-      #   uses: EndBug/add-and-commit@v9
-      #   with:
-      #     new_branch: master
-      #     add: '*.* --force'
-      #     cwd: './public'
-      #     push: 'origin master --force'
-      #     default_author: github_actions
-      #     remove: '*'
-
-      # - name: Commit report
-      #   run: |
-      #       cd ./public
-      #       git init
-      #       git config --global user.name 'GitHub Action'
-      #       git config --global user.email 'action@github.com'
-      #       git add .
-      #       git commit -m "Site deployed by GitHub Actions"
-      #       git push --force --quiet "https://x-access-token:${{ secrets.TOKEN }}@github.com/blackyau/blog" master:master
