--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ timezone: Asia/Shanghai
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://blackyau.cc/
 root: /
-permalink: :urlname.html
+permalink: :urlname
 permalink_defaults:
 
 # Directory
