--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,11 @@ timezone: Asia/Shanghai
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://blackyau.cc/
 root: /
-permalink: :urlname
+permalink: :urlname.html
 permalink_defaults:
+pretty_urls:
+  trailing_html: false
+
 
 # Directory
 source_dir: source
